add i blocchi colorati per le 3 macro aree

--- a/index.html
+++ b/index.html
@@ -8,10 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header id="side-header"></header>
+    <header id="side-header">
+        
+    </header>
     <!-- /#side-header -->
 
-    <main id="side-main"></main>
+    <main id="side-main">
+
+        <section class="section-white">
+            <div class="section-container">
+                
+
+            </div>
+        </section>
+
+        <section class="section-gray">
+
+        </section>
+        <section class="section-white">
+
+        </section>
+    </main>
     <!-- /#side-main -->
 
     <footer id="side-footer"></footer>
