--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <header id="side-header">
+        <nav class="container">
+            <div class="log"></div>
+            <div class="menu"></div>
+            <div class="accedi"></div>
+        </nav>
         
     </header>
     <!-- /#side-header -->
