--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header id="side-header">
         <nav class="container">
-            <div class="log"></div>
+            <div class="logo"></div>
             <div class="menu"></div>
             <div class="accedi"></div>
         </nav>
