add blocco main

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
         <section class="section-white">
             <div class="section-container">
-                
-
+                <div class="left"></div>
+                <div class="right"></div>
             </div>
         </section>
 
