--- a/index.html
+++ b/index.html
@@ -72,6 +72,24 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-gray big-section">
+            <div class="section-container">
+               <div class="section-text">
+                   <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                   <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+               </div> 
+               <img src="img/item4-big.svg">
+               <div class="last-download">
+                   <div class="image-star">
+                       <img src="img/stars.svg">
+                   </div>
+                   <h2>Pronto a iniziare la tua avventura</h2>
+                   <a href="#" class="light-blue"><i class='fas fa-long-arrow-alt-down'></i>
+                    Scarica per Mac</a>
+               </div>
+            </div>
+        </section>
     </main>
     <!-- /#side-main -->
 
