--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>discord</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <header id="side-header">
@@ -93,7 +95,80 @@
     </main>
     <!-- /#side-main -->
 
-    <footer id="side-footer"></footer>
+    <footer id="side-footer">
+            <div class="containers clearfix">
+                <div class="columns">
+                    <div class="col1">
+                        <h3>Il tuo posto per parlare</h3>
+                        <div class="ita-logo">
+                            <img id="ita-logo" src="img/ita.png" alt="">
+                            <select class="language" id="country">
+                                <option>Italiano</option>
+                                <option>Inglese</option>
+
+                            </select>
+                        </div>
+                        <div class="social">
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-facebook"></i>
+                            <i class="fa-brands fa-youtube"></i>
+                        </div>
+                    </div>
+                    <div class="col2">
+                        <ul>
+                            <li>Prodotto</li>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
+                    <div class="col3">
+                        <ul>
+                            <li>Compagnia</li>
+                            <li>Chi siamo</li>
+                            <li>Lavora con noi</li>
+                            <li>Marchio</li>
+                            <li>Redazione</li>
+                            <li>Negozio</li>
+                        </ul>
+                    </div>
+                    <div class="col4">
+                        <ul>
+                            <li>Risorse</li>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
+                    <div class="col5">
+                        <ul>
+                            <li>Norme</li>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+    
+            <div class="containers p-relative">
+                <hr>
+                <img id="footer-logo" src="img/logo.svg" alt="">
+                <span class="register">Registrati</span>
+            </div>
+    </footer>
     <!-- /#side-footer -->
 </body>
 </html>
